test/classes/vass/class-new-error.good
class-new-error.chpl:4: error: invalid use of 'new' (did you forget to add parentheses?)
